# epistack

./: .gitignore  AGENTS.md  CHANGES.md  INSTALL.md  QUICK_START.md  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  run_optimization.py  setup.py  test_imports.py
config/: llm.py
datasets/: DATASET_INFO.md  abstraction_dataset.json  create_filtered_dataset.py  non_snn_examples.json  triples_dataset.json  Интеллектуальные коллективы - тренажерка - Sheet1.csv  Интеллектуальные коллективы - тренажерка - Sheet1.json
dspy_structured_summarizer/: __init__.py  demo_test.py  module.py  signatures.py  summary.md
epistack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
epistack_data/: QUICK_START.sh  README.md  SUMMARY.md  create_hf_dataset.py  use_dataset.py
module_abstraction/: README.md  __init__.py  demo.py  metrics.py  module.py  optimize.py  optimized_module.json  run_optimization.py  signatures.py
module_bibliography_extraction/: README.md  __init__.py  config.py  demo_test.py  metrics.py  module.py  optimize.py  signatures.py
module_concretization/: __init__.py  module.py  signatures.py
module_extraction/: README.md  __init__.py  module.py  optimize.py  signatures.py
module_extraction_by_name/: demo.py  metrics.py  module.py  optimize.py  optimized_module.json  run_optimization.py
module_formatter/: README.md  __init__.py  config.py  demo_test.py  metrics.py  module.py  optimize.py  signatures.py
module_naming/: README.md  __init__.py  demo.py  metrics.py  module.py  optimize.py  optimized_module.json  signatures.py
(+45 files in other folders)
